# advent-of-code-rust

./: .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix  treefmt.toml
.cargo/: config.toml
data/examples/: 01-3.txt
nix/: lib.nix
nix/crates/: default.nix  hello.nix
nix/modules/: aliases.nix  devShells.nix  formatting.nix  infra.nix  rust.nix
src/: lib.rs
src/template/: timings.rs
