[package]
name = "advent_of_code"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[profile.release]
codegen-units = 1
lto = false

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.33", optional = true }
dhat = { version = "0.3.2", optional = true }
pico-args = "0.5.0"
tinyjson = "2.5.1"

# Solution dependencies
regex = "1.10.3"
itertools = "0.12.1"
indoc = "2.0.4"
rayon = "1.8.1"
